find_package(ALSA)

if (ALSA_FOUND)
    ss4s_add_module(alsa FOR_AUDIO DISPLAY_NAME ALSA WEIGHT 10 SOURCES alsa.c)
    if (NOT SS4S_MODULE_TARGET)
        return()
    endif ()
    target_include_directories(${SS4S_MODULE_TARGET} SYSTEM PRIVATE ${ALSA_INCLUDE_DIRS})
    target_link_libraries(${SS4S_MODULE_TARGET} PRIVATE ${ALSA_LIBRARIES})
endif ()