list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
find_package(BroadcomMMAL)

if (BROADCOMMMAL_FOUND)
    ss4s_add_module(mmal FOR_VIDEO DISPLAY_NAME "MMAL" SOURCES mmalvid.c WEIGHT 30)
    if (NOT SS4S_MODULE_TARGET)
        return()
    endif ()
    target_include_directories(${SS4S_MODULE_TARGET} SYSTEM PRIVATE ${BROADCOM_INCLUDE_DIR})
    target_link_libraries(${SS4S_MODULE_TARGET} PRIVATE ${BROADCOM_MMAL_LIBRARIES} pthread)
endif ()