find_package(PkgConfig REQUIRED)

pkg_check_modules(PULSE libpulse-simple)

if (NOT PULSE_FOUND)
    return()
else ()
    set(PULSE_LIBRARY_FOUND FALSE)
    foreach (PULSE_LINK_LIBRARY ${PULSE_LINK_LIBRARIES})
        if (PULSE_LINK_LIBRARY MATCHES "/.*")
            set(PULSE_LIBRARY_FOUND TRUE)
        endif ()
    endforeach ()
    if (NOT PULSE_LIBRARY_FOUND)
        message(STATUS "PkgConfig found pulse, but there is no library for linking, disabling pulse support")
        return()
    endif ()
endif ()

ss4s_add_module(pulse FOR_AUDIO DISPLAY_NAME PulseAudio WEIGHT 10 SOURCES pulse.c)
if (NOT SS4S_MODULE_TARGET)
    return()
endif ()
target_include_directories(${SS4S_MODULE_TARGET} SYSTEM PRIVATE ${PULSE_INCLUDE_DIRS})
target_link_libraries(${SS4S_MODULE_TARGET} PRIVATE ${PULSE_LIBRARIES})